--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -18,8 +18,8 @@ on:
 # JOBS (WHAT TO DO)
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel.
 jobs:
-  # Defines a job named 'build'.
-  build:
+  # Defines a job named 'build-and-zip'.
+  build-and-zip:
     # Specifies the type of machine (runner) the job will run on.
     # I use 'windows-latest' because Step 2 targets IIS (Windows), so it's best to build on a similar OS.
     runs-on: windows-latest
@@ -52,13 +52,13 @@ jobs:
         Write-Host "Generated Version: $version"
 
     # STEP 4: RESTORE DEPENDENCIES
-    # Restores the dependencies and tools of the project (downloads NuGet packages).
+    # Restores the dependencies and tools of the project.
     - name: Restore dependencies
       run: dotnet restore
 
     # STEP 5: BUILD
     # Compiles the application code.
-    # --no-restore: Skips the restore step (since we just did it) to save time.
+    # --no-restore: Skips the restore step (we did on Step 4) to save time.
     # --configuration Release: Builds the app in Release mode (optimized for production).
     # This stamps the DLLs/EXE with the build-time version.
     - name: Build
@@ -66,7 +66,7 @@ jobs:
 
     # STEP 6: PUBLISH (CREATE PACKAGE)
     # Compiles the application and copies all files needed to run into a publish folder.
-    # --no-build: Skips the build step (since we just did it).
+    # --no-build: Skips the build step (we did on step 5).
     # --output: Specifies the folder where the artifacts will be placed.
     # This effectively prepares the application files that will be zipped.
     - name: Publish
@@ -84,3 +84,25 @@ jobs:
         path: ./publish_output/**
         # Fails the pipeline if the expected files are missing.
         if-no-files-found: error
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: build-and-zip   # Waits for the build to finish
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        # Pushes with two tags: 'latest' and the specific GitHub run number
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/helloworld:latest
+          ${{ secrets.DOCKER_USERNAME }}/helloworld:${{ github.run_number }}
